--- a/pano2.html
+++ b/pano2.html
@@ -23,7 +23,7 @@
                 rotation="0 0 0" 
                 width="2" height="3" 
                 material="color: #7BC8A4; opacity: 0.1 " 
-                click-move="start.html">
+                click-move="object1.html">
       </a-plane>
       <a-circle class = "planes" 
                 radius="3"
