--- a/object1.html
+++ b/object1.html
@@ -17,6 +17,6 @@
         </script>
 	</head>
 	<body>
-		<script type="module" src="./main.js"></script>
+		<script type="module" src="./sndct/main.js"></script>
 	</body>
 </html>
