--- a/pano2.html
+++ b/pano2.html
@@ -5,7 +5,7 @@
 
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
 
-    <script type="text/javascript" src="cm.js"></script>
+    <script type="module" src="./cm.js"></script>
 
 
 
@@ -14,7 +14,7 @@
   <body>
     <a-scene vr-mode-ui="enabled: false">
       <a-assets>
-        <img id="img" src="pano2.jpg" />
+        <img id="img" src="./pano2.jpg" />
 
         
       </a-assets>
@@ -23,14 +23,14 @@
                 rotation="0 0 0" 
                 width="2" height="3" 
                 material="color: #7BC8A4; opacity: 0.1 " 
-                click-move="object1.html">
+                click-move="./object1.html">
       </a-plane>
       <a-circle class = "planes" 
                 radius="3"
                 position="-5 -1 9" 
                 rotation="-90 0 0"
                 material="color: #7BC8A4; opacity: 0.1 " 
-                click-move="start.html">
+                click-move="./index.html">
       </a-circle>
       <a-sky id="img-360" radius="500" rotation="0 -90 0" src="#img"> </a-sky>
       <a-camera><a-entity raycaster="objects: .planes" cursor="rayOrigin: mouse"></a-cursor></a-camera>
