--- a/object1.html
+++ b/object1.html
@@ -10,6 +10,6 @@
 
 	</head>
 	<body>
-		<script type="module" src="/main.js"></script>
+		<script type="module" src="./main.js"></script>
 	</body>
 </html>
