--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <title>Galllery</title>
 
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
-    
-
+  
     <script type="module" src="./cm.js"></script>
+
+    <link rel="stylesheet" href="style.css">
 
   </head>
   <body>
