--- a/object1.html
+++ b/object1.html
@@ -7,7 +7,7 @@
 			body { margin: 0; }
 		</style>
 
-
+	<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		<script type="module" src="./main.js"></script>
