--- a/object1.html
+++ b/object1.html
@@ -7,6 +7,14 @@
 			body { margin: 0; }
 		</style>
 
+	<script type="importmap">
+		{
+			"imports": {
+				"three": "/build/three.module.js"
+			}
+		}
+	</script>
+
 	<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
