--- a/object1.html
+++ b/object1.html
@@ -11,7 +11,7 @@
 		{
 			"imports": {
 				"three": "/build/three.module.js",
-				"three/addons/": "/"
+				"three/addons/": "./jsm/"
 			}
 		}
 	</script>
