--- a/object1.html
+++ b/object1.html
@@ -10,8 +10,8 @@
 	<script type="importmap">
 		{
 			"imports": {
-				"three": "/build/three.module.js",
-				"three/addons/": "/"
+				"three": "/build/three.module.js"
+
 			}
 		}
 	</script>
