--- a/object1.html
+++ b/object1.html
@@ -10,7 +10,8 @@
 	<script type="importmap">
 		{
 			"imports": {
-				"three": "/build/three.module.js"
+				"three": "/build/three.module.js",
+				"three/addons/": "/examples/jsm/"
 
 			}
 		}
