--- a/object1.html
+++ b/object1.html
@@ -7,7 +7,14 @@
 			body { margin: 0; }
 		</style>
 
-
+	<script type="importmap">
+		{
+		"imports": {
+			"three": "./build/assets/three.module.js"
+	
+		}
+		}
+	</script>
 
 	<link rel="stylesheet" href="style.css">
 	</head>
