--- a/object1.html
+++ b/object1.html
@@ -10,7 +10,8 @@
 	<script type="importmap">
 		{
 		"imports": {
-			"three": "./build/assets/three.module.js"
+			"three": "./build/assets/three.module.js",
+			"three/addons": "./build/assets/"
 	
 		}
 		}
