--- a/object1.html
+++ b/object1.html
@@ -11,7 +11,7 @@
 		{
 		"imports": {
 			"three": "./build/assets/three.module.js",
-			"three/addons": "./build/assets/"
+			"three/addons": "./build/assets"
 	
 		}
 		}
