--- a/object1.html
+++ b/object1.html
@@ -7,7 +7,7 @@
 			body { margin: 0; }
 		</style>
 
-	<script type="importmap">
+	<!-- <script type="importmap">
 		{
 		"imports": {
 			"three": "./build/assets/three.module.js",
@@ -15,7 +15,7 @@
 	
 		}
 		}
-	</script>
+	</script> -->
 
 	<link rel="stylesheet" href="style.css">
 	</head>
